--- a/app/index.html
+++ b/app/index.html
@@ -24,13 +24,23 @@
   <body>
 
     <div class="hero-unit">
+      <h1>All the feels</h1>
+      <div id="feelsAdder"></div>
       <div id="feelsContainer"></div>
     </div>
 
     <script type="text/template" id="feels">
-      <li>i feel <%=title %> because <%=cause %></li>
+      <li id="<%=_id %>">i feel <%=title %> because <%=cause %> <%=type %></li>
     </script>
 
+  <script type="text/template" id="addFeels">
+    <form id="feelsAdd">
+      <input type="text" id="title" placeholder="My Feelings"/>
+      <input type="text" id="cause" placeholder="Reason"/>
+      <input type="text" id="type"  placeholder="Feel"/>
+      <button>Add Feel</button>
+    </form>
+  </script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -40,10 +50,19 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script type="text/javascript">
+      window.App = {};
+      App.Models = {};
+      App.Collections = {};
+      App.Views = {};
+    </script>
+
         <!-- build:js scripts/main.js -->
         <script src="scripts/models/feelings_model.js" src="scripts/main.js"></script>
         <script src="scripts/collections/feelings_collection.js"></script>
 <script src="scripts/views/feelings_views.js"></script>
+<script src="scripts/views/feelings_add_views.js"></script>
+
         <script src="scripts/main.js"></script>
 
         <!-- endbuild -->
